--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
         <section>
             <h2 class="title">Our emphasis on <span class="brand">hand-coded</span> websites...</h2>
-            <p style="max-width: 800px;" class="about">
+            <p style="max-width: 800px;" class="about long-text">
                 Unlike third-party site builders, we believe that hand-coding offers distinct
                 advantages in terms of reliability, security, and performance. By crafting websites
                 from scratch, we maintain complete control over the design and functionality,
