--- a/index.html
+++ b/index.html
@@ -304,23 +304,7 @@
             </div>
         </section>
 
-        <section class="hero-banner">
-            <div class="video-container">
-                <video
-                    class="video-banner"
-                    preload="none"
-                    loop
-                    autoplay
-                    muted
-                    src="mock.mp4"
-                ></video>
-                <h2 class="hero-title">
-                    No gimmicks, no outrageous fees for separating design/development phases. Just
-                    brilliantly crafted
-                    <span class="brand"> bespoke websites tailored to your success.</span> Period.
-                </h2>
-            </div>
-        </section>
+        <section class="hero-banner"></section>
 
         <section id="contact" style="background: rgba(50, 50, 50, 0.2);">
             <h2 style="font-weight: 600; font-size: 2.5rem;" class="title">
