--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="cta-flex">
             <a href="pages/services.html">
                 <button style="border: 2px solid #ffae00; background: #ffae0020;">
-                    Find Out More
+                    Explore
                 </button>
             </a>
             <a href="#contact">
@@ -322,7 +322,9 @@
             </div>
         </section>
 
-        <section class="hero-banner"></section>
+        <section class="hero-banner">
+            <div class="video-container"></div>
+        </section>
 
         <section id="contact" style="background: rgba(50, 50, 50, 0.2);">
             <h2 style="font-weight: 600; font-size: 2.5rem;" class="title">
