--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                 <span>ABN: 43 464 545 840</span>
             </p>
         </footer>
-        <script type="text/javascript" src="assets/canvas.js"></script>
+        <script src="assets/canvas.js"></script>
         <link
             rel="preload"
             href="assets/material-symbols-rounded.css"
@@ -529,13 +529,8 @@
             onload="this.onload=null;this.rel='stylesheet';renderIcons()"
         />
         <link rel="stylesheet" href="assets/packages/swiper-bundle.min.css" />
-        <script
-            async
-            defer
-            type="text/javascript"
-            src="assets/packages/swiper-bundle.min.js"
-        ></script>
-        <script async defer type="text/javascript" src="assets/main.js"></script>
+        <script async defer src="assets/packages/swiper-bundle.min.js"></script>
+        <script async defer src="assets/main.js"></script>
         <script defer async type="text/javascript">
             ;(function (c, l, a, r, i, t, y) {
                 c[a] =
