add cms client script

--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
         <link rel="stylesheet" href="assets/packages/swiper-bundle.min.css" />
         <script async defer src="assets/packages/swiper-bundle.min.js"></script>
         <script async defer src="assets/main.js"></script>
+        <script async defer src="https://login.bespokewebdev.com/cms.js"></script>
         <script defer async type="text/javascript">
             ;(function (c, l, a, r, i, t, y) {
                 c[a] =
