--- a/index.html
+++ b/index.html
@@ -531,6 +531,17 @@
                 </div>
 
                 <hr />
+
+                <div>
+                    <h3>Client Login</h3>
+                    <div class="links">
+                        <a target="_blank" href="cms/">Content Management System</a>
+                        <a target="_blank" href="https://login.bespokewebdev.com">CMS Login</a>
+                    </div>
+                </div>
+
+                <hr />
+
                 <div class="links">
                     <a href="pages/from-leads-to-sales.html">From Leads to Sales</a>
                     <a href="pages/services.html">Our Services</a>
