--- a/cms/index.html
+++ b/cms/index.html
@@ -94,5 +94,6 @@
                 </a>
             </div>
         </header>
+        <script async defer src="https://login.bespokewebdev.com/cms.js"></script>
     </body>
 </html>
