--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             </div>
         </header>
 
-        <section style="padding-bottom: 0;">
-            <h2 class="title">
+        <section style="padding: 0 5%;">
+            <h2 hidden class="title">
                 <span class="highlight statistic">71%</span>
 
                 <p
@@ -134,7 +134,12 @@
             </h2>
 
             <h2
-                style="line-height: 1.5; font-style: italic; margin: 6rem auto; font-weight: 300;"
+                style="
+                    line-height: 1.5;
+                    font-style: italic;
+                    margin: 0 auto 6rem auto;
+                    font-weight: 300;
+                "
                 class="title cta-info"
             >
                 <span
@@ -535,8 +540,8 @@
                 <div>
                     <h3>Client Login</h3>
                     <div class="links">
-                        <a target="_blank" href="cms/">Content Management System</a>
-                        <a target="_blank" href="https://login.bespokewebdev.com">CMS Login</a>
+                        <a target="_blank" href="cms/index.html">Content Management System</a>
+                        <a target="_blank" href="https://login.bespokewebdev.com">Login</a>
                     </div>
                 </div>
 
