CMS homepage upgrades

--- a/cms/index.html
+++ b/cms/index.html
@@ -58,8 +58,8 @@
             </a>
             <div class="links">
                 <a href="../#about">About Us</a>
-                <a href="../#clientele">Clientele</a>
-                <a href="../#contact">Contact Us</a>
+                <a href="../#contact">Contact</a>
+                <a target="_blank" href="https://login.bespokewebdev.com">Client Login</a>
             </div>
         </nav>
         <header>
@@ -78,20 +78,19 @@
                     system.
                 </p>
 
-                <a
-                    target="_blank"
-                    href="https://buy.stripe.com/4gw4hH1O79ItbYceV0?prefilled_promo_code=CLIENTSTAKE50"
-                >
-                    <button>
+                <div class="cta-container">
+                    <a
+                        class="button"
+                        target="_blank"
+                        href="https://buy.stripe.com/4gw4hH1O79ItbYceV0?prefilled_promo_code=CLIENTSTAKE50"
+                    >
                         Get Access –
                         <span style="font-size: 0.9rem; color: var(--col-1);">
                             Existing clients 50% off
                         </span>
-                    </button>
-                </a>
-                <a href="../#contact">
-                    <button style="margin-left: 1rem;">Contact Us</button>
-                </a>
+                    </a>
+                    <a class="button" href="../#contact">Contact Us </a>
+                </div>
             </div>
         </header>
         <script async defer src="https://login.bespokewebdev.com/cms.js"></script>
