some changes / 11 sace work

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="offer">
                     <span style="opacity: 0;" class="material-symbols-rounded">info</span>
                     <div>
-                        Limited Time: Landing Page Development Starting at AUD$300
+                        Limited Time: Landing Page Development 40% off
                         <del>$600</del>
                         <a href="#contact">Contact Us</a>
                     </div>
