restrict form to australian numbers

--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
                 Get in touch with us today to discuss your next website project.
             </p>
             <form
+                id="formsubmit"
                 action="https://formsubmit.co/cohencoombs@outlook.com"
-                onsubmit="refEmail()"
                 method="POST"
             >
                 <span style="opacity: 0;" class="material-symbols-rounded">chat</span>
