--- a/index.html
+++ b/index.html
@@ -93,14 +93,35 @@
         <header>
             <canvas id="showcase"></canvas>
             <div class="container">
-                <div class="offer">
+                <!-- <div class="offer">
                     <span style="opacity: 0;" class="material-symbols-rounded">info</span>
                     <div>
                         Limited Time: Landing Page Development 40% off
                         <del>$600</del>
                         <a href="#contact">Contact Us</a>
                     </div>
+                </div> -->
+
+                <div
+                    class="banner-awards"
+                    style="display: flex; align-items: center; gap: 2rem; justify-content: center;"
+                >
+                    <a
+                        href="https://techbehemoths.com/awards-2023/winners/web-design/bespoke-web-dev"
+                        target="_blank"
+                    >
+                        <img src="award-wds.png" style="width: 225px; height: auto;" alt="award" />
+                    </a>
+                    <a
+                        href="https://techbehemoths.com/awards-2023/winners/reactjs/bespoke-web-dev"
+                        target="_blank"
+                    >
+                        <img src="award-jsx.png" style="width: 225px; height: auto;" alt="award" />
+                    </a>
                 </div>
+
+                <br /><br />
+
                 <h1>
                     <span id="cycle">Drive Sales</span>
                     <span class="desktop-only">With A Bespoke Website</span>
@@ -108,6 +129,25 @@
                 </h1>
             </div>
         </header>
+
+        <section style="padding: 0;">
+            <a
+                style="display: block; width: 100%; max-width: 1200px; margin: 0 auto 5rem auto;"
+                target="_blank"
+                href="https://techbehemoths.com/awards-2023/web-design/australia"
+            >
+                <img
+                    src="banner-award-2023-64929-long.png"
+                    style="
+                        width: 100%;
+                        height: auto;
+                        border-radius: 1rem;
+                        box-shadow: 1px 1px 5rem #a0781b70;
+                    "
+                    alt="awards-2023"
+                />
+            </a>
+        </section>
 
         <section style="padding: 0 5%;">
             <h2 hidden class="title">
@@ -357,6 +397,21 @@
                     >
                 </div>
             </div>
+        </section>
+
+        <section class="awards">
+            <a
+                href="https://techbehemoths.com/awards-2023/winners/web-design/bespoke-web-dev"
+                target="_blank"
+            >
+                <img src="award-wds.png" style="width: 400px; height: auto;" alt="award" />
+            </a>
+            <a
+                href="https://techbehemoths.com/awards-2023/winners/reactjs/bespoke-web-dev"
+                target="_blank"
+            >
+                <img src="award-jsx.png" style="width: 400px; height: auto;" alt="award" />
+            </a>
         </section>
 
         <div class="hero-banner">
