bwd homepage banner reno

--- a/index.html
+++ b/index.html
@@ -148,8 +148,6 @@
             </div>
         </header>
 
-        <br /><br />
-
         <section style="padding: 0 5%;">
             <h2 hidden class="title">
                 <span class="highlight statistic">71%</span>
@@ -383,7 +381,11 @@
 
         <section style="padding-top: 2rem; padding-bottom: 8rem;">
             <center>
-                <img src="assets/google.png" style="width: auto; height: 100px;" alt="" />
+                <img
+                    src="assets/google.png"
+                    style="width: auto; height: 100px;"
+                    alt="Rated 5-stars on Google"
+                />
             </center>
             <br /><br />
             <h2 class="title separator">The quality speaks for itself, and so do our clients.</h2>
@@ -409,13 +411,13 @@
                 href="https://techbehemoths.com/awards-2023/winners/web-design/bespoke-web-dev"
                 target="_blank"
             >
-                <img src="award-wds.png" style="width: 400px; height: auto;" alt="award" />
+                <img src="award-wds.png" class="award" alt="2023 award winner for Website Design" />
             </a>
             <a
                 href="https://techbehemoths.com/awards-2023/winners/reactjs/bespoke-web-dev"
                 target="_blank"
             >
-                <img src="award-jsx.png" style="width: 400px; height: auto;" alt="award" />
+                <img src="award-jsx.png" class="award" alt="2023 award winner for ReactJS" />
             </a>
         </section>
 
@@ -430,9 +432,6 @@
         <section class="flex-posts">
             <iframe
                 src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftechbehemoths%2Fposts%2Fpfbid02LpHYxvFcYWnoAc9ndSq6Dkoepwmapq3YuKLDEnawB8oY2kWY4Xov7YG9QqW5s4aol&show_text=true&width=500"
-                width="500"
-                height="505"
-                style="border: none; overflow: hidden;"
                 scrolling="no"
                 frameborder="0"
                 allowfullscreen="true"
@@ -440,9 +439,6 @@
             ></iframe>
             <iframe
                 src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FDigitalNomadsHQ%2Fposts%2Fpfbid027QGos7XAqbcm9T7WkXVdU2hcsKsR3MHT7Lup3CGoQwvaAF7Azdkp8VLi3p5i4AXcl&show_text=true&width=500"
-                width="500"
-                height="563"
-                style="border: none; overflow: hidden;"
                 scrolling="no"
                 frameborder="0"
                 allowfullscreen="true"
