fix mp4 format H265 to 264

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
         </header>
 
-        <div style="height: 150vh;">
+        <div style="height: 140vh;">
             <div class="ctaSection">
                 <canvas id="showcase"></canvas>
                 <div>
@@ -380,15 +380,13 @@
                 src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftechbehemoths%2Fposts%2Fpfbid02LpHYxvFcYWnoAc9ndSq6Dkoepwmapq3YuKLDEnawB8oY2kWY4Xov7YG9QqW5s4aol&show_text=true&width=500"
                 scrolling="no"
                 frameborder="0"
-                allowfullscreen="true"
-                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture;"
             ></iframe>
             <iframe
                 src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FDigitalNomadsHQ%2Fposts%2Fpfbid027QGos7XAqbcm9T7WkXVdU2hcsKsR3MHT7Lup3CGoQwvaAF7Azdkp8VLi3p5i4AXcl&show_text=true&width=500"
                 scrolling="no"
                 frameborder="0"
-                allowfullscreen="true"
-                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture;"
             ></iframe>
         </section>
 
