--- a/index.html
+++ b/index.html
@@ -374,20 +374,15 @@
             </h2>
         </section>
         <section class="flex-posts">
-            <iframe
-                src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftechbehemoths%2Fposts%2Fpfbid02LpHYxvFcYWnoAc9ndSq6Dkoepwmapq3YuKLDEnawB8oY2kWY4Xov7YG9QqW5s4aol&show_text=true&width=500"
-                scrolling="no"
-                frameborder="0"
-                allowfullscreen="true"
-                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-            ></iframe>
-            <iframe
-                src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FDigitalNomadsHQ%2Fposts%2Fpfbid027QGos7XAqbcm9T7WkXVdU2hcsKsR3MHT7Lup3CGoQwvaAF7Azdkp8VLi3p5i4AXcl&show_text=true&width=500"
-                scrolling="no"
-                frameborder="0"
-                allowfullscreen="true"
-                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-            ></iframe>
+            <a href="https://www.facebook.com/techbehemoths/posts/760307302812482" target="_blank">
+                <img src="assets/fb-1.png" alt="Facebook post" />
+            </a>
+            <a
+                href="https://www.facebook.com/DigitalNomadsHQ/posts/781258867351823"
+                target="_blank"
+            >
+                <img src="assets/fb-2.png" alt="Facebook post" />
+            </a>
         </section>
 
         <div class="hero-banner">
