Perf optimisations / resource loading

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img
                         src="assets/loader/bwd.svg"
                         alt="Loading..."
-                        style="scale: 0.7; width: 8rem; height: auto; position: absolute;"
+                        style="scale: 0.8; width: 8rem; height: auto; position: absolute;"
                     />
                     <div class="rotated">
                         <img
@@ -159,9 +159,12 @@
             <h2 class="title">Get a FREE Mockup, designed for your business.</h2>
 
             <p>
-                <b>Simply send us your business info.</b>
+                <b>Reach out, tell us about your business.</b>
                 <br />
                 Satisfied with the sample? We'll work together to tailor and launch it for success.
+                <!-- <a style="display: inline; color: var(--col-2);" href="pages/benefits.html"
+                    >Check out example mockups here.</a
+                > -->
             </p>
 
             <a class="cta" href="mailto:cohencoombs@outlook.com">
